--- a/KlappPhipps.css
+++ b/KlappPhipps.css
@@ -6,6 +6,13 @@ body {
   margin: 0;
 }
 
+#titleDiv {
+  height: 25;
+  width: 100%;
+  background-color: black;
+  color: whitesmoke;
+}
+
 #viewDiv {
   padding: 0;
   margin: 0;
