--- a/KlappPhipps.css
+++ b/KlappPhipps.css
@@ -7,18 +7,57 @@ body {
 }
 
 #titleDiv {
-  height: 25;
+  height: 4%;
   width: 100%;
+  padding-left: 5px;
+  display: flex;
+  align-items: center;
   background-color: black;
   color: whitesmoke;
+}
+
+#filterDiv {
+  height: 3%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  background-color: white;
+  color: black;
 }
 
 #viewDiv {
   padding: 0;
   margin: 0;
-  height: 100%;
+  height: 93%;
   width: 100%;
   flex: 1 1 auto;
   order: 1;
   /* overflow: hidden; */
+}
+
+.esri-editor__update-features-action-buttons {
+  visibility: hidden;
+}
+.esri-editor__update-features-action-buttons--button {
+  visibility: hidden;
+}
+
+.esri-editor__panel-content_section {
+  visibility: hidden !important;
+}
+
+#landing-panel__snappingButton {
+  visibility: hidden;
+}
+
+.esri-editor__panel-toolbar {
+  visibility: hidden;
+}
+
+.esri-editor__update-features-action-buttons {
+  visibility: hidden;
+}
+
+.esri-widget__heading {
+  visibility: hidden;
 }
