--- a/KlappPhipps.css
+++ b/KlappPhipps.css
@@ -12,7 +12,7 @@ body {
   padding-left: 5px;
   display: flex;
   align-items: center;
-  background-color: black;
+  background-color: darkslategray;
   color: whitesmoke;
 }
 
@@ -65,6 +65,45 @@ body {
   background-color: transparent;
   width: 50px;
   height: 50px;
+  border: 0px;
+}
+
+/* div.esri-component.esri-editor.esri-widget.esri-widget--panel
+  > calcite-flow
+  > calcite-panel
+  > article.container
+  > header.header {
+  display: none;
+} */
+
+/* div.esri-component.esri-editor.esri-widget.esri-widget--panel
+  calcite-flow
+  calcite-panel
+  ~ article.container
+  header.header
+  div.header-content {
+  display: none !important;
+}
+
+header.header {
+  display: none;
+} */
+
+div.header-content h4 {
+  display: none;
+}
+
+h4.heading {
+  display: none;
+}
+
+div.header-content {
+  display: none;
+}
+
+/* top space on first panel, holds directions & form on subsequent panels */
+div.esri-editor__scroller.esri-editor__panel-content > div:first-child {
+  display: flex;
 }
 
 /* .esri-editor__update-features-action-buttons {
