--- a/KlappPhipps.css
+++ b/KlappPhipps.css
@@ -4,6 +4,7 @@ body {
   height: 100%;
   padding: 0;
   margin: 0;
+  font-family: Helvetica, Arial, sans-serif;
 }
 
 #titleDiv {
@@ -36,108 +37,37 @@ body {
 }
 
 #infoPanel_controls_content {
-  /* display: flex; */
-  /* width: 50%; */
-  padding: 5;
-  background-color: whitesmoke;
+  width: 300px;
+  padding: 0 15 12 15;
 }
 
-/* #butterfly_controls_content {
-  background-image: url("purpleButterfly.ico");
-} */
-
-.esri-ui-bottom-right.esri-ui-corner
+/****************************************************** 
+JUST KEEPING FOR FUTURE REFERENCE
+******************************************************/
+/* make edit expand button the butterfly icon */
+/* .esri-ui-bottom-right.esri-ui-corner
   .esri-component.esri-expand.esri-widget.esri-expand--auto
   .esri-expand__container
   .esri-expand__panel
   .esri-widget--button {
-  /* content: "test"; */
   background-image: url("purpleButterfly.png");
   width: 50px;
   height: 50px;
   background-color: rgba(0, 0, 100, 0.1);
   border-color: black;
   border-width: 5px;
-}
-
-#editButton {
-  background-image: url("purpleButterfly.png");
-  background-color: transparent;
-  width: 50px;
-  height: 50px;
-  border: 0px;
-}
-
-/* div.esri-component.esri-editor.esri-widget.esri-widget--panel
-  > calcite-flow
-  > calcite-panel
-  > article.container
-  > header.header {
-  display: none;
 } */
-
-/* div.esri-component.esri-editor.esri-widget.esri-widget--panel
-  calcite-flow
-  calcite-panel
-  ~ article.container
-  header.header
-  div.header-content {
-  display: none !important;
-}
-
-header.header {
-  display: none;
-} */
-
-div.header-content h4 {
-  display: none;
-}
-
-h4.heading {
-  display: none;
-}
-
-div.header-content {
-  display: none;
-}
+/*****************************************************/
 
 /* top space on first panel, holds directions & form on subsequent panels */
 div.esri-editor__scroller.esri-editor__panel-content > div:first-child {
   display: flex;
 }
 
-/* .esri-editor__update-features-action-buttons {
-  visibility: hidden;
-}
-.esri-editor__update-features-action-buttons--button {
-  visibility: hidden;
-}
+/*****************************************************
+Adjusting the Editor layout to hide unnecessary fields
+*****************************************************/
 
-.esri-editor__panel-content_section {
-  visibility: hidden !important;
-}
-
-#landing-panel__snappingButton {
-  visibility: hidden;
-}
-
-.esri-editor__panel-toolbar {
-  visibility: hidden;
-}
-
-.esri-editor__update-features-action-buttons {
-  visibility: hidden;
-}
-
-.esri-widget__heading {
-  visibility: hidden;
-}
-
-.esri-ui-bottom-right .esri-expand__content {
-  right: 75% !important;
-} */
-
-/* Adjusting the Editor layout to hide unnecesary fields*/
 div.esri-editor__scroller > div:first-child h5 {
   display: none;
 }
@@ -154,10 +84,160 @@ div.esri-editor__update-features-action-buttons {
   display: none;
 }
 
-/* div.esri-editor__panel-content__section:first-of-type {
-  display: none;
+/*****************************************************
+Customizing the styling of the widgets
+*****************************************************/
+.esri-widget__table {
+  background-color: green;
+  font-weight: 1;
+  margin: 0 0 0.5rem 0;
 }
 
-div.esri-editor__scroller.esri-editor__panel-content {
-  display: flex;
-} */
+.esri-widget__heading {
+  background-color: green;
+  font-weight: 1;
+  margin: 0 0 0.5rem 0;
+}
+h1.esri-widget__heading {
+  background-color: green;
+  font-size: 20px;
+  color: blueviolet;
+}
+h2.esri-widget__heading {
+  font-size: 14px;
+  color: blueviolet;
+}
+h3.esri-widget__heading,
+h4.esri-widget__heading,
+h5.esri-widget__heading,
+h6.esri-widget__heading {
+  font-size: 14px;
+  color: blueviolet;
+}
+esri-widget__anchor {
+  background-color: green;
+}
+.esri-button {
+  background-color: green;
+}
+
+/*****************************************************
+above from official docummentation did nothing; new try below
+*****************************************************/
+/* isn't working */
+#layers {
+  background-color: aquamarine !important;
+}
+
+/* nw */
+div.esri-widget--esri-expand__panel {
+  background-color: aquamarine;
+}
+
+/* nw */
+div.esri-expand__container.esri-expand__container--expanded {
+  background-color: aquamarine;
+}
+
+/* nw */
+div.esri-expand__panel {
+  background-color: palegoldenrod;
+  border-radius: 5px;
+}
+
+/* nw */
+div#layers_controls_content.esri-expand__content.esri-expand__content--expanded {
+  background-color: papayawhip;
+  border-radius: 5px;
+}
+
+/* WORKS changes layer list styles; two elements overlaid so both included to avoid edges poking out */
+div#layers_controls_content.esri-expand__content.esri-expand__content--expanded,
+div.esri-layer-list.esri-widget.esri-widget--panel {
+  background-color: papayawhip;
+  border-radius: 5px;
+}
+
+/* WORKS; changes layer list styles; two elements overlaid so both included to avoid edges poking out */
+div#infoPanel_controls_content.esri-expand__content.esri-expand__content--expanded {
+  background-color: papayawhip;
+  border-radius: 5px;
+}
+
+/* changes border radius but not colors */
+div.esri-component.esri-editor.esri-widget.esri-widget--panel {
+  background-color: papayawhip;
+  border-radius: 5px;
+}
+
+/* nw */
+header.header {
+  background-color: papayawhip !important;
+}
+
+/* nw */
+div.header-content {
+  background-color: papayawhip !important;
+}
+
+/* nw */
+article.container {
+  background-color: peachpuff;
+}
+
+/* nw */
+calcite-flow {
+  background-color: peachpuff;
+}
+
+/* nw */
+calcite-panel {
+  background-color: peachpuff;
+}
+
+div.frame.frame--retreating {
+  background-color: papayawhip;
+}
+
+/* works for editor panel, but not editor heading*/
+div.esri-editor__scroller.esri-editor__panel-content,
+div.esri-item-list__group {
+  background-color: papayawhip;
+}
+
+/* WORKS to Style buttons (there appear to be two objects overlaid when using expand, 
+so have to include both to avoid white edges sticking out underneath*/
+div.esri-widget--button,
+div.esri-component.esri-expand.esri-widget.esri-expand--auto,
+div.esri-collapse__icon.esri-expand__icon--expanded.esri-icon-collapse,
+div.esri-expand__container.esri-expand__container--expanded {
+  background-color: papayawhip;
+  border-radius: 5px;
+}
+
+div.esri-widget--button:hover {
+  background-color: palegoldenrod;
+  border-radius: 5px;
+}
+/* make edit expand button the butterfly icon */
+/* same as above, but  much simpler since I just gave it an ID in the constructor */
+#editButton {
+  background-image: url("purpleButterfly.png");
+  background-color: papayawhip;
+  border-radius: 5px;
+  width: 50px;
+  height: 50px;
+  border: 0px;
+}
+
+#editButton:hover {
+  background-color: palegoldenrod;
+  border-radius: 5px;
+}
+
+/* basemap widget styling */
+div.esri-basemap-gallery.esri-widget.esri-widget--panel-height-only,
+div.esri-expand__content.esri-expand__content--expanded {
+  background-color: papayawhip;
+  border-radius: 5px;
+}
