--- a/KlappPhipps.css
+++ b/KlappPhipps.css
@@ -38,7 +38,7 @@ body {
 
 #infoPanel_controls_content {
   /* width: 300px; */
-  padding: 12 15 12 15;
+  padding: 15;
 }
 
 /****************************************************** 
@@ -165,6 +165,7 @@ div#infoPanel_controls_content.esri-expand__content.esri-expand__content--expand
   /* display: flex;
   flex-direction: column; */
   min-width: 300;
+  padding: auto;
 }
 
 /* changes border radius but not colors */
