--- a/KlappPhipps.css
+++ b/KlappPhipps.css
@@ -19,6 +19,7 @@ body {
 #filterDiv {
   height: 4%;
   width: 100%;
+  padding-left: 5px;
   display: flex;
   align-items: center;
   background-color: papayawhip;
